--- a/src/styles/hintSecretWord.scss
+++ b/src/styles/hintSecretWord.scss
@@ -3,5 +3,14 @@
     justify-content: center;
     align-items: center;
     font-size: 25px;
+    margin-bottom: 20px;
     font-weight: 700;
+}
+
+@media (max-width: 850px) {
+
+    .hint-secret-word {
+        font-size: 20px;
+    }
+
 }
