--- a/src/styles/secretWord.scss
+++ b/src/styles/secretWord.scss
@@ -2,10 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .secret-word-line {
     font-size: 40px;
     font-weight: bold;
     width: 35px;
+}
+
+@media (max-width: 850px) and (min-width: 600px) {
+
+    .secret-word-line {
+        font-size: 25px;
+    }
+
 }
