--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,11 @@ body {
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 768px) {
+
+    .container {
+        flex-direction: column;
+    }
+
+}
