--- a/src/styles/quizPart.scss
+++ b/src/styles/quizPart.scss
@@ -7,3 +7,12 @@
 .disabled {
     background-color: rgb(145, 145, 145);
 }
+
+@media (max-width: 768px) {
+
+    .quiz-part-container {
+        width: 100%;
+        margin-top: 550px;
+    }
+
+}
